<resources>
    <string name="app_name">Namaste</string>
    <string name="menu_order">My Order</string>
    <string name="menu_wishlist">My Wishlist</string>
    <string name="menu_account">My Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">गेलरी</string>
    <string name="menu_slideshow">स्लाइड शो</string>
    <string name="menu_tools">
उपकरण</string>
    <string name="menu_share">
शेयर</string>
    <string name="menu_send">
भेजें</string>
    <string name="title_activity_home"></string>
    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string name="trending_msg">
आज के लिए ट्रेंडिंग</string>
    <string name="city">City*</string>
    <string name="locality">Locality, area or street*</string>
    <string name="building">Flat number,Building name*</string>
    <string name="pincode">Pincode*</string>
    <string name="landmark">Landmark(Optional)</string>
    <string name="name">Name*</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="alternate_mobile_number">Alternate Mobile Number.(optional)</string>
    <string name="save_btn">Save</string>
    <string name="add_new_address">Add a new address</string>
    <string name="update_btn">Update</string>
    <string name="provide_valid_phone_number">Please provide valid phone number</string>
    <string name="provide_valid_pincode">Please provide valid pincode</string>
    <string name="total_delivery_amount">Rs.***/-</string>
    <string name="total_amount">Total Amount</string>
    <string name="my_cart">"My Cart"</string>
    <string name="continue_btn">Continue</string>
    <string name="item_count">ITEMS</string>
    <string name="plus_taxes">plus taxes</string>
    <string name="view_cart">View cart</string>
    <string name="thank_you">Thank you</string>
    <string name="confirm_msg">Your order has been confirmed.</string>
    <string name="order_id">Order Id :</string>
    <string name="confirm_msg_to_user">You will shortly receive your order confirmation message and email.</string>
    <string name="continue_shopping_btn">Continue shopping</string>
    <string name="expected_delivery_msg">Expected delivery within 4-6 days.</string>
    <string name="amount">Rs.499</string>
    <string name="delivery_heading">Delivery</string>
    <string name="order_list_saving_failure_msg">Failed to update user\'s order list.</string>
    <string name="order_cancelled_msg">Order Cancelled.</string>
    <string name="network_not_available_msg">Network connection error: Check your internet connectivity</string>
    <string name="client_authentication_failed_error">Authentication failed: Server error</string>
    <string name="ui_error_msg">UI Error </string>
    <string name="error_loading_web_page_msg">Unable to load webpage </string>
    <string name="transaction_cancelled_msg">Transaction cancelled</string>
    <string name="something_went_wrong_msg">Something went wrong.</string>
    <string name="saved_addresses_msg">SAVED ADDRESSES</string>
    <string name="deliver_here_btn">Deliver here</string>
    <string name="concelled_body_msg">Your order has been cancelled.</string>
    <string name="no_recent_orders_msg">No recent orders found.</string>
    <string name="no_address_found_msg">No address found</string>
    <string name="my_addresses_heading">My Addresses</string>
    <string name="notifications_heading">Notifications</string>
    <string name="orders_details_heading">Order details</string>
    <string name="ordered_msg">Your order has been placed.</string>
    <string name="packed_msg">Your order has been packed.</string>
    <string name="shipped_msg">Your order has been shipped.</string>
    <string name="out_for_delivery_msg">Your order is out for delivery.</string>
    <string name="out_for_delivery">Out for delivery</string>
    <string name="cancelled_msg">Cancelled</string>
    <string name="delivered_msg">Your order has been delivered.</string>
    <string name="price_heading">Price</string>
    <string name="items_heading">Items</string>
    <string name="verification_msg">Verification number has been sent to </string>
    <string name="incorrect_otp_msg">Incorrect OTP.</string>
    <string name="otp_sent_failure_msg">failed to send the otp verification code.</string>
    <string name="out_of_stock_msg">out of stock</string>
    <string name="recovery_email_sent_msg">Recovery Email sent successfully. Check your email inbox.</string>
    <string name="incorrect_email_or_password">Incorrect email or password.</string>
    <string name="password_does_not_match">Password doesn\'t matched.</string>
    <string name="view_all_activity_heading">Deals of the day</string>
    <string name="enter_otp_msg">Enter OTP</string>
    <string name="please_wait_msg">Please wait, it can take upto 60s - 120s to recieve the sms on your phone.</string>
    <string name="verify_btn">Verify</string>
    <string name="add_to_cart_btn">ADD TO CART</string>
    <string name="buy_now_btn">buy now</string>
    <string name="product_not_found">Product not found.</string>
    <string name="fullName">Full name</string>
    <string name="address">Address</string>
    <string name="edit_btn">Edit</string>
    <string name="remove_btn">Remove</string>
    <string name="product_name">IPOME</string>
    <string name="remove_item_btn">Remove item</string>
    <string name="price_details">Price Details</string>
    <string name="delivery">Delivery</string>
    <string name="category_text">Household</string>
    <string name="add">Add+</string>
    <string name="sign_out_btn">Sign out</string>
    <string name="product_desc">No product description found.</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="forget_password_msg">Don\'t worry, we just need your registered email address and its done.</string>
    <string name="provide_email">Provide your registered email here</string>
    <string name="reset_password_btn">Reset Password</string>
    <string name="sent_email_msg">Recovery Email sent successfully. Check your inbox</string>
    <string name="go_back_btn"> Go back</string>
    <string name="email_hint">Email ID</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="or_tv">OR</string>
    <string name="sign_in_msg">Don\'t have an account? Sign Up</string>
    <string name="password_hint_msg">Password (minimum 8 characters)</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="sign_up_msg">Already have an account?Sign in</string>
    <string name="title_hint">Title</string>
    <string name="view_all_btn">View All</string>
    <string name="my_addresses">My Addresses</string>
    <string name="delivery_on_msg">Delivery on </string>
    <string name="fullName_msg">Not Signed In</string>
    <string name="email_address">Email Address</string>
    <string name="ordered">Ordered</string>
    <string name="packed">Packed</string>
    <string name="shipped">Shipped</string>
    <string name="delivered">Delivered</string>
    <string name="quantity">Quantity:</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="paytm">Paytm</string>
    <string name="description">Description</string>
    <string name="specifications">Specifications</string>
    <string name="other_details">Other details</string>
    <string name="product_details">Product Details</string>
    <string name="feature_name">Feature name</string>
    <string name="feature_value">Feature Value</string>
    <string name="cancel_btn">Cancel</string>
    <string name="ok_btn">OK</string>
    <string name="shipping_details">SHIPPING DETAIL</string>
    <string name="change_or_add_address_btn">Change or Add address button</string>
    <string name="sign_in_dialog_msg">Just few steps away from cart.</string>
    <string name="your_recent_order_msg">Your recent orders</string>
    <string name="already_added_to_cart_msg">Already added to cart</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="select_language">Choose your preferred language</string>
    <string name="continue_in_english">Continue in english</string>
    <string name="language"> Change language</string>
    <string name="search">Search</string>
    <string name="activity_register">Register</string>
    <string name="have_an_email_account">Have an email account? </string>
    <string name="mobile_verification_fails">Mobile Number verification fails.</string>
    <string name="code">Code</string>
    <string name="phone_code" translatable="false">+%s</string>
    <string name="country_name_and_code" translatable="false">%1$s (%2$s)</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="no_result_found">No result found</string>
    <string name="select_country">Select county</string>
    <string name="country_code_and_phone_code">(%1$s) +%2$s</string>
    <string name="country_full_name_and_phone_code">%1$s +%2$s</string>
    <string name="error_unregister_carrier_number">EditText for carrier number is not registered. Register it using registerPhoneNumberTextView() before getFullNumber() or setFullNumber().</string>
    <string name="message_something_wrong">Something went wrong.Please try again later.</string>
    <string name="country_ascension_island_name">Ascension Island</string>
    <string name="country_ascension_island_code">ac</string>
    <string name="country_ascension_island_number" translatable="false">247</string>
    <string name="country_afghanistan_name">Afghanistan</string>
    <string name="country_afghanistan_code">af</string>
    <string name="country_afghanistan_number" translatable="false">93</string>
    <string name="country_albania_name">Albania</string>
    <string name="country_albania_code">al</string>
    <string name="country_albania_number" translatable="false">355</string>
    <string name="country_algeria_name">Algeria</string>
    <string name="country_algeria_code">dz</string>
    <string name="country_algeria_number" translatable="false">213</string>
    <string name="country_american_samoa_name">American Samoa</string>
    <string name="country_american_samoa_code">as</string>
    <string name="country_american_samoa_number" translatable="false">1</string>
    <string name="country_andorra_name">Andorra</string>
    <string name="country_andorra_code">ad</string>
    <string name="country_andorra_number" translatable="false">376</string>
</resources>