<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_myMall"
            android:icon="@mipmap/ic_store_mall_directory_24px"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@mipmap/my_orders"
            android:title="@string/menu_order" />
<!--        <item-->
<!--            android:id="@+id/nav_rewards"-->
<!--            android:icon="@mipmap/my_rewards"-->
<!--            android:title="My Reward" />-->
        <item
            android:id="@+id/nav_cart"
            android:icon="@mipmap/cart_white"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@mipmap/my_wishlist"
            android:title="@string/menu_wishlist" />
        <item
            android:id="@+id/nav_account"
            android:icon="@mipmap/my_account"
            android:title="@string/menu_account" />
<!--        <item-->
<!--            android:id="@+id/nav_share"-->
<!--            android:icon="@drawable/ic_menu_share"-->
<!--            android:title="@string/menu_share"-->
<!--            />-->
<!--        <item-->
<!--            android:id="@+id/nav_sign_out"-->
<!--            android:icon="@mipmap/ic_mail_outline_24px"-->
<!--            android:title="Sign Out" />-->
    </group>



</menu>
